@@ -30,7 +30,7 @@ alter table screens_items add		valign	int(2)	DEFAULT '0' NOT NULL;
 alter table screens_items add		halign	int(2)	DEFAULT '0' NOT NULL;
 alter table screens_items add		style	int(4)	DEFAULT '0' NOT NULL;
 
+alter table rights add		key	(userid);
 alter table screens_items add		url	varchar(255)	DEFAULT '' NOT NULL;
-
 
 alter table actions add			scripts	blob		DEFAULT '' NOT NULL;
