@@ -1,5 +1,6 @@
 Changes for 1.1beta8:
 
+ - fixed highly unefficient check of permissions (Alexei)
  - developed remote commads execution on specific actions (Eugene)
  - added "URL" module for screens (Eugene)
  - added trigger selecton from popup (Eugene)
